# iqr-gazebo

./: CMakeLists.txt  GroupsSDICchallenge.md  HowToSetup.md  Main.md  ProjectHome.md  QuestionAndAnswers.md  RunCompetition.md  RunnginGazeboIQR.md  SDICchallenge.md  iqrBugFeatures.md  update_compile.sh  update_complie.sh
DAC_files/: DACBugBasicArena.iqr  DACReactiveBug.iqr  plotTrajectory.m
SDIC_challange/: SDIC_debug_arena.world  SDIC_test_arena.world  TDValue.iqrProcess
SDIC_challenge/: Difference.iqrProcess  SDIC_arena.world  SDIC_competition.world  SDIC_two_robot_arena.world  gazeboBug1.iqr  runBugs.sh
SDIC_examples/PID/: PID.iqrProcess  PIDBug.iqr  PIDcomp.iqr  pid.hconf
SDIC_tutorial/world/: follow_line.world
SDICtutorial/models/lineFollow/: model.sdf
SDICtutorial/models/square_arena/: model.sdf
SDICtutorial/world/: robot_iqr.world
gazebo_files/: DAC_arena.world  DAC_basic_ambiguous_arena.world  DAC_basic_arena.world  SDIC_arena.world  SDIC_test_arena.world  TM_arena.world  setServerIP.sh
gazebo_files/models/: create_yellow_target.sh
gazebo_files/models/DAC_BasicAmbiguousPlane/: model.sdf
gazebo_files/models/DAC_BasicPlane/: model.sdf
gazebo_files/models/DAC_Bug/: model.sdf
gazebo_files/models/DAC_Plane/: model.sdf
gazebo_files/models/DAC_Reset/: model.config  model.sdf
gazebo_files/models/DAC_SimpleWall/: model.config
gazebo_files/models/DAC_Target/: model.sdf
gazebo_files/models/DAC_Wall/: model.config  model.sdf
gazebo_files/models/SDIC_Bug/: model.sdf
gazebo_files/models/SDIC_Debug/: model.config  model.sdf
gazebo_files/models/SDIC_GreenBug/: model.config  model.sdf
gazebo_files/models/SDIC_Gripper/: model.config  model.sdf
gazebo_files/models/SDIC_Home/: model.sdf
gazebo_files/models/SDIC_RedBug/: model.sdf
gazebo_files/models/SDIC_Target/: model.sdf
gazebo_files/reset_plugin/: reset_plugin.cc
gazebo_files/target_plugin/: CMakeLists.txt  target_plugin.cc
gazebo_files/vel_plugin/: CMakeLists.txt  vel_plugin.cc
gazebo_files/world_control/: CMakeLists.txt  countdown.cpp  countdown.hpp  main.cpp  score.cpp  score.hpp  transport.cpp  transport.hpp  worldcontrol.cpp  worldcontrol.hpp
iqr_files/: DACAdaptiveBug.iqr  DACBugBasicArena.iqr  DACContextualBug.iqr  DACReactiveBug.iqr  gazebo2Bugs.iqr  gazebo4Bugs.iqr  gazeboBug.iqr  iqrBug.iqrProcess  killBugs.sh
iqr_module/: ModuleIcon_bug.h  gazebo_bug.cpp  gazebo_bug.hpp  moduleGazeboBug.cpp  moduleGazeboBug.hpp
iqr_modules/directionModule/: directionModule.cpp
iqr_modules/gazeboModule/: gazebo_bug.cpp  gazebo_bug.hpp  moduleGazeboBug.cpp  moduleGazeboBug.hpp
iqr_neurons/: neuronTDValue.cpp  neuronTDValue.hpp
iqr_synapses/: CMakeLists.txt
scripts/: remote_setup.sh  set_server_ip.sh  set_up_basic.sh  set_up_competition.sh
trunk/: CMakeLists.txt  set_server_IP.sh  update_compile.sh
trunk/DAC_files/: DACBugBasicArena.iqr  DACReactiveBug_ex.iqr  DAC_basic_apprach_avoid_arena.world  DAC_basic_arena.world  plotTrajectory.m  plotWeights.m
trunk/SDIC_challange/: SDIC_arena.world  gazeboBug.iqr  iqrCloner.sh
trunk/SDIC_challenge/: GoalDirection.iqrProcess  connections  gazeboBug1.iqr  gazeboBug2.iqr
trunk/SDIC_examples/PID/: .iqr  PID.iqr
trunk/SDIC_examples/denoising/: denoising.iqr
trunk/SDIC_tutorial/iqr_files/: SDIC_robot_template.iqr
trunk/gazebo_files/: DAC_arena.world  DAC_basic_arena.world  SDIC_arena.world  SDIC_test_arena.world
trunk/gazebo_files/models/: create_red_bug.sh
trunk/gazebo_files/models/DAC_BasicAmbiguousPlane/: model.config
trunk/gazebo_files/models/DAC_BasicPlane/: model.sdf
trunk/gazebo_files/models/DAC_Bug/: model.config  model.sdf
trunk/gazebo_files/models/DAC_SimpleWall/: model.sdf
trunk/gazebo_files/models/DAC_Target/: model.config
trunk/gazebo_files/models/DAC_plane/: model.sdf
trunk/gazebo_files/models/SDIC_Bug/: model.sdf
trunk/gazebo_files/models/SDIC_Camera/: model.config  model.sdf
trunk/gazebo_files/models/SDIC_GreenBug/: model.config  model.sdf
trunk/gazebo_files/models/SDIC_Gripper/: model.sdf
trunk/gazebo_files/models/SDIC_Home/: model.config
trunk/gazebo_files/models/SDIC_RedBug/: model.config  model.sdf
trunk/gazebo_files/models/SDIC_Target/: model.sdf
trunk/gazebo_files/models/SDIC_Wall/: model.config  model.sdf
trunk/gazebo_files/models/SDIC_WallHuge/: model.sdf
trunk/gazebo_files/models/SDIC_YellowTarget/: model.config  model.sdf
trunk/gazebo_files/models/TM_Wall/: model.sdf
trunk/gazebo_files/models/black_plane/: model.sdf
trunk/gazebo_files/models/lineFollow/: model.config
trunk/gazebo_files/models/sun/: model-1_2.sdf  model-1_3.sdf
trunk/gazebo_files/reset_plugin/: CMakeLists.txt  reset_plugin.cc
trunk/gazebo_files/target_plugin/: CMakeLists.txt  target_plugin.cc
trunk/gazebo_files/vel_plugin/: CMakeLists.txt  vel_plugin.cc
trunk/gazebo_files/world_control/: CMakeLists.txt  countdown.cpp  countdown.hpp  score.hpp  transport.cpp  transport.hpp  worldcontrol.cpp  worldcontrol.hpp
trunk/iqr_files/: DACAdaptiveBug.iqr  DACBugBasicArena.iqr  DACContextualBug.iqr  connections  gazeboBug.iqr  iqrBug.iqrProcess  iqrCloner.sh
trunk/iqr_module/: CMakeLists.txt  gazebo_bug.cpp  gazebo_bug.hpp  moduleGazeboBug.cpp  moduleGazeboBug.hpp
trunk/iqr_modules/differenceModule/: CMakeLists.txt  differenceModule.cpp  differenceModule.hpp
trunk/iqr_modules/directionModule/: CMakeLists.txt  directionModule.hpp
trunk/iqr_modules/gazeboModule/: CMakeLists.txt  gazebo_bug.cpp  moduleGazeboBug.cpp  moduleGazeboBug.hpp
trunk/iqr_neurons/: CMakeLists.txt
trunk/iqr_synapses/: synapseHebbian.cpp  synapseHebbian.hpp
trunk/scripts/: set_up_competition.sh
trunk/world_control/: main.cpp  worldcontrol.cpp
wiki/: GroupsSDICchallenge.wiki  HowToSetup.wiki  Main.wiki  ProjectReportTemplate.doc  QuestionAndAnswers.wiki  RunCompetition.wiki  RunnginGazeboIQR.wiki  SDICchallenge.wiki  TableOfContent.wiki  iqrBugFeatures.wiki
world_control/: CMakeLists.txt  countdown.cpp
(+8 files in other folders)
